# pavex-serve-dir

./: Cargo.toml  README.md
assets/: index.html  script.js
serve_dir/: Cargo.toml
serve_dir/src/: blueprint.rs
serve_dir/src/routes/: files.rs  mod.rs
serve_dir_server/: Cargo.toml
serve_dir_server/src/: configuration.rs
serve_dir_server/tests/integration/: helpers.rs
serve_dir_server_sdk/: Cargo.toml
serve_dir_server_sdk/src/: lib.rs
