[package]
name = "serve_dir_server"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/api.rs"
name = "api"

[dependencies]
anyhow = "1"
pavex = { version = "0.1.18" }
tokio = { version = "1", features = ["full"] }
serve_dir_server_sdk = { path = "../serve_dir_server_sdk" }
serve_dir = { path = "../serve_dir" }

# Configuration
dotenvy = "0.15"
figment = { version = "0.10", features = ["env", "yaml"] }
serde = { version = "1", features = ["derive"]}

# Telemetry
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-panic = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "registry", "smallvec", "std", "tracing-log"] }

[dev-dependencies]
reqwest = "0.11"